<resources>
    <string name="app_name" translatable="false">INB1OO</string>
    <string name="payment">Cobro</string>
    <string name="total">Total</string>
    <string name="totalPay" translatable="false">$%s</string>
    <string name="numCard">Número de tarjeta</string>
    <string name="validate">Válido hasta</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="mail">Correo</string>
    <string name="red">Red</string>
    <string name="pay">Pagar</string>
    <string name="name">Nombre</string>
    <string name="fMonth" translatable="false">MM</string>
    <string name="formatDate" translatable="false">/</string>
    <string name="fYear" translatable="false">YY</string>
    <string name="enterName">Ingrese un nombre válido</string>
    <string name="enterNumCard">Ingrese un número de tarjeta válido</string>
    <string name="enterExMonth">Ingrese un mes válido</string>
    <string name="enterExYear">Ingrese un año válido</string>
    <string name="enterCVV">Ingrese un CVV válido</string>
    <string name="enterMail">Ingrese un correo válido</string>
    <string name="correctData">Por favor corrige tus datos</string>
    <string name="version">Versión 1.0.0</string>
    <string name="dsLogo">Logo de INB100</string>
    <string name="type_card">Red de pago</string>
    <string name="clientName" translatable="false">%s:</string>
    <string name="payApproved">Has pagado $%1$s de tu tarjeta %2$s </string>
    <string name="payDenied">El pago por $%s de tu tarjeta %s ha sido rechazado. </string>
    <string name="spError">Error: No seleccionaste un elemento de la lista</string>
    <string name="btnDone">Hecho</string>
    <string name="stCard" translatable="false">************</string>
    <string name="rOpe">resultado de operación</string>
</resources>